import java.util.ArrayList;

public class Series extends Media{
    public Series(){}
    public Series(String name, String releaseYear, String genre, String imdbRating) {
        super(name, releaseYear, genre, imdbRating);

    }

    @Override
    public String toString() {
        return super.toString();
    }
}